test/error/if-capture-on-nonnullable.dsk
let x = 1
if x: y
    echo(y)
